--- a/flanders/index-flanders.html
+++ b/flanders/index-flanders.html
@@ -7,7 +7,7 @@
     <title>Cosme Fulanillo</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="css/fontello.css">
-    <link rel="icon" type="icon/png" href="img/logo.png">
+    <link rel="icon" type="icon/png" href="../img/logo.png">
     
    
  
@@ -17,7 +17,7 @@
         <header class="header">
             <a class="logo" href="index-flanders.html">
                 <img src="../img/logo.png" alt="">
-                <h1><strong>Cosme Fulanillo</strong> <br>Negocirilijillos Inmobiliarios</h1>
+                <h1><strong>Cosme Fulanillo</strong> <br>Negocios Inmobiliarios</h1>
             </a>
             <nav class="nav_resp">
                 
