--- a/flanders/nosotros-flanders.html
+++ b/flanders/nosotros-flanders.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/nosotros.css">
-    <link rel="icon" type="icon/png" href="img/logo.png">
+    <link rel="icon" type="icon/png" href="../img/logo.png">
    
  
 </head>
@@ -17,13 +17,13 @@
         <header class="header">
             <a class="logo" href="index-flanders.html">
                 <img src="../img/logo.png" alt="">
-                <h1><strong>Cosme Fulanillo</strong> <br>Negocirilijillos Inmobiliarios</h1>
+                <h1><strong>Cosme Fulanillo</strong> <br>Negocios Inmobiliarios</h1>
             </a>
             <nav class="nav_resp">
                 
                 <input type="checkbox" id="check"> 
                 <label  for="check" class="menu-ham">
-                    <i class="menu-icono"><img src="./img/ham3.png" alt=""></i>
+                    <i class="menu-icono"><img src="../img/ham3.png" alt=""></i>
                 </label>
                 
                 <ul class="nav_links">
