--- a/flanders/venta-flanders.html
+++ b/flanders/venta-flanders.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/nosotros.css">
-    <link rel="icon" type="icon/png" href="img/logo.png">
+    <link rel="icon" type="icon/png" href="../img/logo.png">
    
  
 </head>
@@ -17,13 +17,13 @@
         <header class="header">
             <a class="logo" href="index-flanders.html">
                 <img src="../img/logo.png" alt="">
-                <h1><strong>Cosme Fulanillo</strong> <br>Negocirilijillos Inmobiliarios</h1>
+                <h1><strong>Cosme Fulanillo</strong> <br>Negocios Inmobiliarios</h1>
             </a>
             <nav class="nav_resp">
                 
                 <input type="checkbox" id="check"> 
                 <label  for="check" class="menu-ham">
-                    <i class="menu-icono"><img src="./img/ham3.png" alt=""></i>
+                    <i class="menu-icono"><img src="../img/ham3.png" alt=""></i>
                 </label>
                 
                 <ul class="nav_links">
@@ -45,7 +45,7 @@
 
 
         <section class="banner_venta">
-                <div class="desa"><h2>UNOS COMPRAN, OTROS VENDEN! TODOS FELICIRILIJILLOS</h2></div>
+                <div class="desa"><h2>VENTAS FELICIRILIJILLAS</h2></div>
              <div class="ola" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C210.21,168.27 224.32,-36.00 500.00,49.98 L500.00,150.00 L-7.62,164.31 Z" style="stroke: none; fill: white;"></path></svg></div>
         </section>
 
