--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </label>
                 
                 <ul class="nav_links">
-                    <li><a href="venta.html">Venta</a></li>
+                    <li><a href="venta.html">Ventas</a></li>
                     <li><a href="alquileres.html">Alquileres</a></li>
                     <li><a href="subastas.html">Subastas</a></li>
                     <li><a href="desarrollos.html">Desarrollos</a></li>
